Added Resume and Reset Button

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
                     max="59">
             </div>
             <button id="startBtn">Start</button>
+            <button id="stopBtn">Stop</button>
+            <button id="resumeBtn">Resume</button>
             <button id="resetBtn">Reset</button>
             <div class="timer" id="timer">00:00</div>
         </div>
